# grove

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  cliff.toml  hk.pkl
.github/: release-drafter.yml
.github/workflows/: auto-tag.yml  ci.yml  release-drafter.yml  release-pr.yml  release.yml
src/: cli.rs  commands.rs  config.rs  copyfiles.rs  git.rs  main.rs  meta.rs  shell.rs
tests/: integration.rs
