[package]
name = "grove"
version = "0.1.0"
edition = "2021"
description = "A fast, simple git worktree manager"
license = "MIT"
repository = "https://github.com/crainte/grove"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
