[package]
name = "grove"
version = "0.2.1"
edition = "2024"
description = "A fast, simple git worktree manager"
license = "MIT"
repository = "https://github.com/crainte/grove"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
colored = "2"
rayon = "1"
indicatif = "0.17"
fs2 = "0.4"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
